# sql-to-dbsp-compiler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
SQL-compiler/: compile-jit.sh  example.json  mysqlsltbugs.txt  pom.xml  psqlsltbugs.txt  run-tests.sh  sltbugs.txt  sql-to-dbsp  test.rs  x.json
SQL-compiler/src/main/antlr4/org/dbsp/: Zetalexer.g4  Zetalexer.tokens  Zetatest.g4
SQL-compiler/src/main/codegen/: config.fmpp
SQL-compiler/src/main/codegen/includes/: parserImpls.ftl
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/: CompilerMain.java  Main.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/circuit/: DBSPCircuit.java  DBSPInnerNode.java  DBSPNode.java  DBSPPartialCircuit.java  IDBSPDeclaration.java  IDBSPInnerDeclaration.java  IDBSPNode.java  SqlRuntimeLibrary.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/circuit/operator/: DBSPAggregateOperator.java  DBSPCircuit.java  DBSPConstantOperator.java  DBSPDifferentialOperator.java  DBSPDistinctOperator.java  DBSPFilterOperator.java  DBSPFlatMapOperator.java  DBSPIncrementalAggregateOperator.java  DBSPIncrementalDistinctOperator.java  DBSPIncrementalJoinOperator.java  DBSPIndexOperator.java  DBSPIntegralOperator.java  DBSPJoinOperator.java  DBSPMapIndexOperator.java  DBSPMapOperator.java  DBSPNegateOperator.java  DBSPNoopOperator.java  DBSPOperator.java  DBSPSinkOperator.java  DBSPSourceOperator.java  DBSPSubtractOperator.java  DBSPSumOperator.java  DBSPUnaryOperator.java  DBSPWindowAggregateOperator.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/: CompilerOptions.java  Solutions.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/backend/: BetaReduction.java  CircuitCloneVisitor.java  CircuitDelegateVisitor.java  CircuitFunctionRewriter.java  DBSPCompiler.java  DeadCodeVisitor.java  EmptyInnerVisitor.java  FunctorVisitor.java  IncrementalizeVisitor.java  InnerExpressionRewriteVisitor.java  JitNormalizeInnerVisitor.java  NoIntegralVisitor.java  OptimizeDistinctVisitor.java  OptimizeIncrementalVisitor.java  PassesVisitor.java  RemoveOperatorsVisitor.java  RustFileWriter.java  ThreeOperandVisitor.java  ToCsvVisitor.java  ToDotVisitor.java  ToJSONVisitor.java  ToJitInnerVisitor.java  ToJitVisitor.java  ToRustHandleVisitor.java  ToRustInnerVisitor.java  ToRustVisitor.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/errors/: CompilerMessages.java  SourceFileContents.java  SourcePosition.java  SourcePositionRange.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/dbsp/: AggregateCompiler.java  CalciteToDBSPCompiler.java  DBSPTransaction.java  ExpressionCompiler.java  JoinConditionAnalyzer.java  TypeCompiler.java  Visitor.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/frontend/: CalciteCompiler.java  CalciteProgram.java  Catalog.java  ColumnInfo.java  CreateTableStatement.java  DDLSimulator.java  DropTableStatement.java  SimulatorResult.java  SqlSimulator.java  SqlSimulator.java~Updated upstream  TableDDL.java  TableModifyStatement.java  UpdateStatment.java  ViewDDL.java  package-info.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/ir/: CircuitVisitor.java  DBSPAggregate.java  DBSPFile.java  DBSPFunction.java  DBSPParameter.java  DBSPStructStruct.java  DBSPTraitImplementation.java  DBSPTypeConstraint.java  InnerVisitor.java  ToIndentableString.java  Visitor.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/ir/path/: DBSPPath.java  (+2 more)
SQL-compiler/src/main/java/org/dbsp/sqllogictest/: AcceptancePolicy.java  DBSPExecutor.java  ExecutionOptions.java  ISqlTestExecutor.java  ISqlTestOperation.java  Main.java  QueryAcceptancePolicy.java  README.md  RustTestGenerator.java  SLTTestFile.java  SqlStatement.java  SqlStatementList.java  SqlTestFile.java  SqlTestOutputDescription.java  SqlTestPrepare.java  SqlTestPrepareInput.java  SqlTestPrepareTables.java  SqlTestPrepareViews.java  SqlTestQuery.java  SqlTestQueryOutputDescription.java  TestAcceptancePolicy.java
SQL-compiler/src/main/java/org/dbsp/sqllogictest/executors/: CalciteExecutor.java  DBSPExecutor.java  DBSP_JDBC_Executor.java  ISqlTestExecutor.java  JDBCExecutor.java  NoExecutor.java  RustTestGenerator.java  SqlSLTTestExecutor.java  SqlTestExecutor.java
SQL-compiler/src/main/java/org/dbsp/util/: IDebuggable.java  IIndentStream.java  IModule.java  IdGen.java  IndentStream.java  IndentStringBuilder.java  Linq.java  Logger.java  NameGen.java  SqlDialectConverter.java  SqlLexicalRulesConverter.java  SqlTestExecutor.java  StringPrintStream.java  TestStatistics.java  ToIndentableString.java  ToRustString.java  Unimplemented.java  Utilities.java
SQL-compiler/src/main/java/org/dbsp/zetasqltest/: Main.java  NoExecutor.java  README.md  ZetaSQLTest.java  ZetaSQLTestFile.java  ZetatestVisitor.java  package-info.java  zetalexer.g4  zetatest.g4
SQL-compiler/src/test/java/org/dbsp/sqlCompiler/compiler/: ArrayTests.java  BaseSQLTests.java  CalciteCompilerTests.java  CalciteTests.java  CastTests.java  ComplexQueriesTest.java  CustomParser.java  DBSPCompilerTests.java  EndToEndTests.java  EndToEndTests.java~Updated upstream  IRTests.java  MultiViewTests.java  NaiveIncrementalTests.java  NexmarkTest.java  OptimizedIncrementalTests.java  OptimizedIncrementalTests.java~Support for geo data types  OtherTests.java  StreamingTests.java  TimeTests.java  VisitorTests.java  ZsetasqlTests.java  zsetasqlTests.java
doc/: README.rst  sql.rst
doc/sql/: array.rst  boolean.rst  comparisons.rst  datetime.rst  decimal.rst  functions.rst  integer.rst  semantics.rst  structure.rst  types.rst
lib/genlib/: Cargo.toml
lib/genlib/src/: lib.rs
lib/hashing/: Cargo.toml
lib/hashing/src/: lib.rs
lib/readers/: Cargo.toml
lib/readers/src/: lib.rs  test.csv
lib/sqllib/: Cargo.toml
lib/sqllib/src/: casts.rs  geopoint.rs  lib.rs  timestamp.rs
lib/sqllibbool/: Cargo.toml  README.md
lib/sqllibbool/src/: lib.rs
lib/sqlvalue/: Cargo.toml
lib/sqlvalue/src/: lib.rs
lib/tuple/: Cargo.toml  README.md
lib/tuple/src/: lib.rs
temp/: .gitignore  Cargo.toml  README.md
(+453 files in other folders)
