[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsp = { git = "https://github.com/vmware/database-stream-processor.git", features = ["with-serde"], default-features = false }
dbsp_adapters = { git = "https://github.com/vmware/database-stream-processor.git", default-features = false }
#dbsp = { path = "../../database-stream-processor", features = ["with-serde"] }
#dbsp_adapters = { path = "../../database-stream-processor/adapters" }
tuple = { path = "../lib/tuple" }
sqllib = { path = "../lib/sqllib" }
sqlvalue = { path = "../lib/sqlvalue" }
serde = { version = "1.0", features = ["derive"] }
hashing = { path = "../lib/hashing" }
compare = { version = "0.1.0" }
genlib = { path = "../lib/genlib" }
size-of = { version = "0.1.1", features = ["rust_decimal"] }
readers = { path = "../lib/readers" }
rust_decimal = { version = "1.26" }
rust_decimal_macros = { version = "1.26" }
geo = { version = "0.23" }
geo-types = { version = "0.7" }

[lib]
path = "src/lib.rs"

# Incremental builds sometimes crash the compiler
[profile.test]
incremental = false
