[package]
name = "readers"
version = "0.1.0"
edition = "2021"

[dependencies]
tuple = { path = "../tuple" }
sqlvalue = { path = "../sqlvalue" }
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.1" }
dbsp = { git = "https://github.com/vmware/database-stream-processor.git", features = ["with-serde"] }
size-of = { version = "0.1.1" }
