[package]
name = "sqllib"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsp = { git = "https://github.com/vmware/database-stream-processor.git" }
#dbsp = { path = "../../../database-stream-processor.git" }
sqlx = { version = "0.6.2", features = ["bigdecimal"] }
geo = { version = "0.23" }
geo-types = { version = "0.7" }
size-of = { version = "0.1.5", features = ["bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
num = { version = "0.4.0" }
chrono = { version = "0.4.23" }
