[package]
name = "sqlvalue"
version = "0.1.0"
edition = "2021"

[dependencies]
#dbsp = { path = "../../../database-stream-processor.git" }
dbsp = { git = "https://github.com/vmware/database-stream-processor.git", default-features = false }
sqlx = { version = "0.6.2" }
sqllib = { path = "../sqllib" }
